--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container" id="app">
         <ol>
-            <li v-for="mail in emails">{{email}}</li>
+            <li v-for="mail in emails">{{mail}}</li>
         </ol>
     </div>
 
